        validator classes. The former takes a sax handler as an argument
        and sends it sax events to serialize the field value, the latter
        takes serialized values and massages them back into valid formulator
        values. These methods are not used within formulator itself, and
        introduce no new dependencies.

    Bugs Fixed

      - Fixed issue for render_view of list fields with no default
        value.

      - Fixed issue with non-ascii characters in the title of a newly
        created form or field if the unicode property has been set
        (Patch from Bertrand Croq)

  1.8.0

    Features Added

      - Remove i18n prefix and message id generation strategy from
        Formulator.  It is cleaner to do this with i18n:translate in
        ZPT. Extraction of messages can be done from .form XML files
        (though this functionality is not yet part of Formulator).

      - Introduce message id markers and .po file for Formulator generated
        error messages. These can be made translated in your own
        page templates like this:

           <p i18n:domain="formulator" i18n:translate="" 
              tal:content="my_error_text"></p>

      - Test framework now uses (and requires) ZopeTestCase. This allowed
        some testing setup cruft to be removed.

    Bugs Fixed

      - Added explicit security declatation for the "fieldAdd" DTML-file.
        This fixed a problem with copy & paste fields in Zope 2.7.3.

      - Fields having been removed via the XML tab in the ZMI still
        showed up in the "Contents" tab.

      - As a convenience TALES expressions now may return "None" for
        the default value, which is rendered as the empty string.
        (previously it has been rendered as "value".)

  1.7.0
 
    Features Added

      - Added FormulatorFormFile, which can be used to load XML
        representations of forms from filesystem code like
        PageTemplateFile.
